body overflow fixing

--- a/css/general/home.css
+++ b/css/general/home.css
@@ -24,7 +24,7 @@
 }
 
 .diary-logo{
-    max-width: 100%;
+    max-width: 90%;
     /* border-radius: 50%; */
 }
 
