--- a/css/general/style.css
+++ b/css/general/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    width: 100vw;
+    width: 100%;
     font-weight: 400;
     line-height: 1.6;
     color: #333333;
